@startuml

title __PROJECT's Class Diagram__\n

  namespace project {
    class project.Client {
        {static} + stage : Stage
        {static} + main()
        + start()
    }
  }
  

  namespace project {
    class project.Server {
        {static} + stage : Stage
        {static} + main()
        + start()
    }
  }
  

  project.Client -up-|> javafx.application.Application
  project.Server -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
